// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Capital letters in story names converted into delimiters 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"capitalization--big-barking-dog\\": {
      \\"name\\": \\"Big barking dog\\",
      \\"levels\\": [
        \\"Capitalization\\"
      ],
      \\"locStart\\": 8,
      \\"locEnd\\": 10,
      \\"filePath\\": \\"tests/fixtures/capitalization.stories.tsx\\",
      \\"meta\\": {}
    },
    \\"capitalization--blue-tiny-cat\\": {
      \\"name\\": \\"Blue tiny cat\\",
      \\"levels\\": [
        \\"Capitalization\\"
      ],
      \\"locStart\\": 4,
      \\"locEnd\\": 6,
      \\"filePath\\": \\"tests/fixtures/capitalization.stories.tsx\\",
      \\"meta\\": {}
    }
  }
}"
`;

exports[`Capital letters in the filename converted into delimiters 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"filename-capitalization--test\\": {
      \\"name\\": \\"Test\\",
      \\"levels\\": [
        \\"Filename capitalization\\"
      ],
      \\"locStart\\": 4,
      \\"locEnd\\": 6,
      \\"filePath\\": \\"tests/fixtures/filenameCapitalization.stories.tsx\\",
      \\"meta\\": {}
    }
  }
}"
`;

exports[`Default title is used instead of the file name 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"title--cat\\": {
      \\"name\\": \\"Cat\\",
      \\"levels\\": [
        \\"Title\\"
      ],
      \\"locStart\\": 8,
      \\"locEnd\\": 10,
      \\"filePath\\": \\"tests/fixtures/default-title.stories.tsx\\",
      \\"meta\\": {}
    }
  }
}"
`;

exports[`Extract and merge story meta 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"title--cat\\": {
      \\"name\\": \\"Cat\\",
      \\"levels\\": [
        \\"Title\\"
      ],
      \\"locStart\\": 14,
      \\"locEnd\\": 16,
      \\"filePath\\": \\"tests/fixtures/story-meta.stories.tsx\\",
      \\"meta\\": {
        \\"baseweb\\": {
          \\"theme\\": \\"dark\\",
          \\"browsers\\": [
            \\"chrome\\",
            \\"firefox\\"
          ],
          \\"width\\": \\"500px\\"
        },
        \\"links\\": true
      }
    },
    \\"title--dog\\": {
      \\"name\\": \\"Dog\\",
      \\"levels\\": [
        \\"Title\\"
      ],
      \\"locStart\\": 26,
      \\"locEnd\\": 28,
      \\"filePath\\": \\"tests/fixtures/story-meta.stories.tsx\\",
      \\"meta\\": {
        \\"baseweb\\": {
          \\"theme\\": \\"dark\\",
          \\"browsers\\": [
            \\"chrome\\",
            \\"webkit\\"
          ]
        }
      }
    }
  }
}"
`;

exports[`Extract default meta 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"title--cat\\": {
      \\"name\\": \\"Cat\\",
      \\"levels\\": [
        \\"Title\\"
      ],
      \\"locStart\\": 13,
      \\"locEnd\\": 15,
      \\"filePath\\": \\"tests/fixtures/default-meta.stories.tsx\\",
      \\"meta\\": {
        \\"baseweb\\": {
          \\"foo\\": \\"title\\"
        }
      }
    }
  }
}"
`;

exports[`Single file with two stories 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"animals--cat\\": {
      \\"name\\": \\"Cat\\",
      \\"levels\\": [
        \\"Animals\\"
      ],
      \\"locStart\\": 4,
      \\"locEnd\\": 6,
      \\"filePath\\": \\"tests/fixtures/animals.stories.tsx\\",
      \\"meta\\": {}
    },
    \\"animals--dog\\": {
      \\"name\\": \\"Dog\\",
      \\"levels\\": [
        \\"Animals\\"
      ],
      \\"locStart\\": 8,
      \\"locEnd\\": 10,
      \\"filePath\\": \\"tests/fixtures/animals.stories.tsx\\",
      \\"meta\\": {}
    }
  }
}"
`;

exports[`Story name replaces named export as a story name 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"storyname--capital-city\\": {
      \\"name\\": \\"Capital city\\",
      \\"levels\\": [
        \\"Storyname\\"
      ],
      \\"locStart\\": 15,
      \\"locEnd\\": 17,
      \\"filePath\\": \\"tests/fixtures/storyname.stories.tsx\\",
      \\"meta\\": {}
    },
    \\"storyname--champs-élysées\\": {
      \\"name\\": \\"Champs élysées\\",
      \\"levels\\": [
        \\"Storyname\\"
      ],
      \\"locStart\\": 19,
      \\"locEnd\\": 21,
      \\"filePath\\": \\"tests/fixtures/storyname.stories.tsx\\",
      \\"meta\\": {}
    },
    \\"storyname--doggo\\": {
      \\"name\\": \\"Doggo\\",
      \\"levels\\": [
        \\"Storyname\\"
      ],
      \\"locStart\\": 4,
      \\"locEnd\\": 9,
      \\"filePath\\": \\"tests/fixtures/storyname.stories.tsx\\",
      \\"meta\\": {}
    }
  }
}"
`;

exports[`Turn file name delimiters into spaces and levels correctly 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"our-animals--mammals--cat\\": {
      \\"name\\": \\"Cat\\",
      \\"levels\\": [
        \\"Our animals\\",
        \\"Mammals\\"
      ],
      \\"locStart\\": 4,
      \\"locEnd\\": 6,
      \\"filePath\\": \\"tests/fixtures/our-animals--mammals.stories.tsx\\",
      \\"meta\\": {}
    }
  }
}"
`;
